# os16

./: .gitignore  CMakeLists.txt  README.md  bx_enh_dbg.ini  compile.sh  opsys.bxrc  opsys2.bxrc  qemu.sh  run.sh
asm/: bootload.asm  kernel.asm  kernelc.asm
images/: floppy.img  floppya.img
include/: proc.h  userlib.h
scripts/: check_size.sh  insert_bytes.sh
src/: kernel.c  loadFile.cpp  proc.c  shell.c  uprog1.c  uprog2.c  userlib.c
src/asm/: CMakeLists.txt
src/c/: CMakeLists.txt  kernel.c  uprog2.c  userlib.c
src/c99/: CMakeLists.txt  testproc.c
src/cpp/: CMakeLists.txt  loadFile.cpp
src/nasm/: CMakeLists.txt
